<resources>
    <string name="app_name">Lyrics Getter</string>
    <string name="xposed_desc">Lyrics Getter</string>
    <string name="home_fragment_label">Home</string>
    <string name="version_name_label">Module version</string>
    <string name="version_code_label">Module version number</string>
    <string name="version_type_label">Module release version</string>
    <string name="settings_fragment_label">Settings</string>
    <string name="app_rules_fragment_label">Supported app</string>
    <string name="activated">Activated</string>
    <string name="unactivated">Not activated</string>
    <string name="build_time_label">Build time</string>
    <string name="unactivated_summary">Click here to restart the software</string>
    <string name="welcome">Welcome to use</string>
    <string name="restart_the_scoped_software">Restart the software with defined scope</string>
    <string name="restart">Restart</string>
    <string name="api_version_label">API version</string>
    <string name="config_version_label">Configuration file version</string>
    <string name="show_hide_desktop_icons">Show/hide Home screen icons</string>
    <string name="getting_app_information">Getting app information</string>
    <string name="getting_app_information_tips">Please wait…</string>
    <string name="api">API mode: %s</string>
    <string name="more_api">API version too high\nCurrent version %s | Required version %s</string>
    <string name="low_api">API version too low\nCurrent version %s | Required version %s</string>
    <string name="hook">Hook mode: %s</string>
    <string name="no_support">Not supported</string>
    <string name="exclude">Version removed and unsupported</string>
    <string name="un_know">Not included</string>
    <string name="app_rules_version_label">App support list version</string>
    <string name="show_app_rules">Show all app support list</string>
    <string name="update_app_rules">Update support list</string>
    <string name="multi_rule">Details %1$s: %2$s</string>
    <string name="uninstall_rule">Not installed: Supports %s modes in total</string>
    <string name="app_rules_tips">Not included: It doesn\'t mean that it can\'t be used; it just means that you don\'t know the minimum supported version, so there are no inclusion rules.\nSome software isn\'t included. Feel free to provide feedback and report any errors.</string>
    <string name="output_repeated_lyrics">Output repeated lyrics</string>
    <string name="enhanced_hidden_lyrics">Enhanced hidden lyrics</string>
    <string name="enhanced_hidden_lyrics_summary">Some apps aren\'t applicable, which may result in distorted lyrics.</string>
    <string name="allow_some_software_to_output_after_the_screen">Allow the app to display output after the screen is off</string>
    <string name="regex_replace">Regular expression to block lyrics</string>
    <string name="device_label">Device information</string>
    <string name="new_rule_detected_loading">New app support list detected. Loading…</string>
    <string name="new_rule_detected">New app support list detected</string>
    <string name="new_rule_detected_tips">New app support list detected. Restart to take effect.</string>
    <string name="new_version_detected">New version detected</string>
    <string name="update">Update</string>
    <string name="check_update_error">An error occurred while checking for updates</string>
    <string name="app_rules_api_version_label">App support list API version</string>
    <string name="backup">Backup</string>
    <string name="recovery">Recovery</string>
    <string name="recovery_summary">Restart the app to take effect</string>
    <string name="select_the_mode_you_want_to_view">Select the current app support mode you want to view</string>
    <string name="mode_num">App support mode %s</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="api_version">API version</string>
    <string name="start_version_code">Start version code</string>
    <string name="end_version_code">End version code</string>
    <string name="exclude_versions">Exclude versions</string>
    <string name="get_lyric_type">Get lyric type</string>
    <string name="remarks">Remarks</string>
    <string name="use_api">Use API</string>
    <string name="no_have">None</string>
    <string name="api_pattern">API mode</string>
    <string name="meizu_status_bar_mode">Meizu status bar mode</string>
    <string name="car_bluetooth_lyrics_mode">Car Bluetooth lyrics mode</string>
    <string name="desktop_lyrics_mode">Desktop lyrics mode</string>
    <string name="enforced_mode">Enforced mode</string>
    <string name="current_status">Current status</string>
    <string name="rules_are_only_for_viewing_supported_versions">The App support list is only for viewing supported software versions.\nThere may be some discrepancies with the actual acquisition.\nThe actual hook fetches the lyrics and doesn\'t refer to the data on this page.</string>
    <string name="notice">Notice</string>
    <string name="salt_use_flyme">Salt/Sweet and Sour Music uses Meizu interface</string>
    <string name="salt_use_flyme_summary">It isn\'t recommended to switch when the API mode is active</string>
    <string name="multiple_modes_work">There are multiple modes that can be used normally</string>
    <string name="show_title">Force show title</string>
    <string name="version_differences">The Release version doesn\'t generate logs, while the Debug version does. Therefore, it\'s recommended to avoid installing the Debug version.</string>
    <string name="fuck_wyy">Force lyrics in status bar of NetEase Cloud Music</string>
    <string name="fuck_wyy_tips">Turning on the switch may cause anomalies in NetEase Cloud Music, and this module isn\'t responsible for it.</string>
    <string name="fuck_fuck_wyy">Disable NetEase Cloud Music detection</string>
    <string name="fuck_fuck_wyy_tips">Try to bypass NetEase Cloud Music\'s hook detection may result in a ban. We\'re not responsible if you get banned due to this module.</string>
    <string name="fuck_wyy_about">NetEase Cloud Music lyrics acquisition settings</string>
    <string name="lyric_setting">Lyrics acquisition settings</string>
    <string name="test_app_delay">Delay time (ms)</string>
    <string name="test_app_useOwnMusicController">Custom music controller</string>
    <string name="test_app_customIcon">Custom icon</string>
    <string name="test_app_icon">App icon</string>
    <string name="test_app_lyric">App lyrics</string>
    <string name="test_app_play">Playback status</string>
    <string name="test_app_name">App name</string>
    <string name="lyric_test">Lyrics test</string>
    <string name="app_no_permissions">Insufficient permissions</string>
    <string name="app_get_permissions">If you can\'t get the list of installed apps, go to Settings to enable the installed apps list permission.</string>
    <string name="app_go_setting">Go to Settings</string>
    <string name="send_test_lyric">Send test lyrics</string>
    <string name="clean_test_lyric">Clear test lyrics</string>
    <string name="mifocus_tips">Only HyperOS 2.0 is available and resolves whitelisting. Please turn on notifications when using it.</string>
    <string name="mifocus">Send HyperOS focus notifications</string>
    <string name="test_lyric_tips">Warning: If the test here doesn\'t show any issues, it may be a problem with other software. If there are issues when sending the test lyrics, please provide your feedback. If there are no issues, the cause is something else. The focus notification is used to test if you\'ve disabled the whitelist.</string>
</resources>
