<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:defaultValue="false"
        android:key="output_repeated_lyrics"
        android:title="@string/output_repeated_lyrics" />
    <SwitchPreference
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:defaultValue="false"
        android:key="enhanced_hidden_lyrics"
        android:summary="@string/enhanced_hidden_lyrics_tips"
        android:title="@string/enhanced_hidden_lyrics" />
    <SwitchPreference
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:defaultValue="false"
        android:key="allow_some_software_to_output_after_the_screen"
        android:title="@string/allow_some_software_to_output_after_the_screen" />
</PreferenceScreen>
