<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="24dp"
    android:spacing="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/test_app_name"
        app:layout_constraintTop_toTopOf="@+id/test_app_name">

        <TextView
            android:id="@+id/test_app_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/test_app_name"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/test_app_name_text"
            app:layout_constraintEnd_toStartOf="@+id/test_app_name_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/test_app_name_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/test_app_name" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="#00FFFFFF"
        app:cardBackgroundColor="#00FFFFFF"
        app:cardPreventCornerOverlap="false"
        app:cardUseCompatPadding="false">


        <TextView
            android:id="@+id/test_app_play"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/test_app_play"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/test_app_play_text"
            app:layout_constraintEnd_toStartOf="@+id/test_app_play_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/test_app_play_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/test_app_play" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">


        <TextView
            android:id="@+id/test_app_lyric"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/test_app_lyric"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/test_app_lyric_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/test_app_lyric_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/test_app_lyric"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/test_app_lyric" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">


        <TextView
            android:id="@+id/test_app_icon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/test_app_icon"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/test_app_icon_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/test_app_icon_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/test_app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/test_app_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">


        <TextView
            android:id="@+id/test_app_useOwnMusicController"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/test_app_useOwnMusicController"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/test_app_useOwnMusicController_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/test_app_useOwnMusicController_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/test_app_useOwnMusicController"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/test_app_useOwnMusicController" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">


        <TextView
            android:id="@+id/test_app_customIcon"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/test_app_customIcon"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/test_app_customIcon_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/test_app_customIcon_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/test_app_customIcon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/test_app_customIcon" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp">


        <TextView
            android:id="@+id/test_app_delay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/test_app_delay"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/test_app_delay_text"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/test_app_delay_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/test_app_delay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/test_app_delay" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>
